# ProjectMan

./: .gitignore  BugFixes.md  LICENSE  README.md  pyproject.toml
.claude/agents/: pm.md
.github/workflows/: ci.yml
.project/: DRIFT.md  INDEX-EPICS.md  INDEX-STORIES.md  INDEX-TASKS.md  INDEX.md  INFRASTRUCTURE.md  PROJECT.md  SECURITY.md  TESTING.md  activity.jsonl  config.yaml  index.yaml
.project/epics/: EPIC-PRJ-1.md  EPIC-PRJ-10.md  EPIC-PRJ-11.md  EPIC-PRJ-12.md  EPIC-PRJ-2.md  EPIC-PRJ-3.md  EPIC-PRJ-4.md  EPIC-PRJ-5.md  EPIC-PRJ-6.md  EPIC-PRJ-7.md  EPIC-PRJ-8.md  EPIC-PRJ-9.md
.project/stories/: US-PRJ-1.md  US-PRJ-10.md  US-PRJ-11.md  US-PRJ-12.md  US-PRJ-13.md  US-PRJ-14.md  US-PRJ-15.md  US-PRJ-16.md  US-PRJ-17.md  US-PRJ-18.md  (+54 more)
docs/: getting-started.md  installation.md
tests/: conftest.py  test_activity_log.py  test_actor_field.py  test_archive_activity_log.py  test_audit.py  test_audit_impl_tasks.py  test_auto_commit.py  test_auto_commit_hook.py  test_auto_commit_messages.py  test_cache_staleness.py  test_changeset.py  test_cli.py  test_commit_scope.py  test_config.py  test_coordinated_push.py  test_create_feature_branch.py  test_create_pr.py  test_deploy_branch_protection.py  test_deps.py  test_embeddings.py  test_embeddings_auto_index.py  test_estimator.py  test_feature_branch_workflow.py  test_git_status.py  test_git_status_dashboard.py  test_grab_reclaim.py  test_hub.py  test_hub_conflicts.py  test_hub_pr_workflow.py  test_hub_ref_update_after_merge.py  test_hub_validation.py  test_indexer.py  test_logging_transparency.py  test_models.py  test_no_auto_push.py  test_orchestrator_api.py  test_pm_activity.py  test_pr_workflow_integration.py  test_readiness.py  test_run_log.py  (+13 more)
(+557 files in other folders)
